--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 python:
   - "2.7"
-cache: pip
+cache:
+  directories:
+    - $HOME/env
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
